Message is marked as read after 10 seconds of viewing. Failed attempts to fix page title on mobile.

--- a/resources/public/css/bass.css
+++ b/resources/public/css/bass.css
@@ -258,7 +258,7 @@ div#instrument .item-error {
 }
 
 .card.message {
-    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .card.message.participant .card-footer {
